--- a/config/crd/bases/mlhub.njuics.cn_dlexperiments.yaml
+++ b/config/crd/bases/mlhub.njuics.cn_dlexperiments.yaml
@@ -15,6 +15,8 @@ spec:
     plural: dlexperiments
     singular: dlexperiment
   scope: Namespaced
+  subresources:
+    status: {}
   validation:
     openAPIV3Schema:
       description: DLExperiment is the Schema for the dlexperiments API
